sizes of height 935

--- a/about.html
+++ b/about.html
@@ -28,28 +28,28 @@
     </header>
     <section data-section-index="0" class="about-page__sect about-page__sect--1">
       <div class="ffd-standart-container">
-        <h1>CREATIVE AGENCY</h1>
-        <p class="ffd-paragrafh">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod t.ffd-standartpor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Esse cillum dolore eu fugiat nulla pariatur.</p>
+        <h1 class="animated fadeIn slower">CREATIVE AGENCY</h1>
+        <p class="ffd-paragrafh animated fadeIn slow delay-1s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod t.ffd-standartpor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
-      <div class="about-page__sect-cover"></div>
-      <div class="about-arrow"><img src="img/about-page/arrow-down-black.svg" alt="alt"></div>
+      <div class="about-page__sect-cover animated fadeInLeft"></div>
+      <div class="about-arrow arrow-vertical"><img src="img/about-page/arrow-down-black.svg" alt="alt"></div>
     </section>
     <section data-section-index="1" class="about-page__sect about-page__sect--2">
       <div class="we-want-left">
-        <h2>WHAT <br>WE <br>WANT <br>TO DO</h2>
+        <h2 class="to-animate animated zoomOutDown">WHAT <br>WE <br>WANT <br>TO DO</h2>
         <div class="we-want__caption">… among other things</div><a href="#" class="ffd-magenta-link">CHECK WORK CASES IN OUR PORTFOLIO</a>
       </div>
       <div class="we-want-right">
         <div class="we-want-cards">
           <div class="we-want-cards__line">
-            <div class="we-want-card">
+            <div class="we-want-card animated fadeOutLeft fast">
               <div class="we-want-card__content">
                 <h3 class="we-want-card__title">BRANDING</h3>
                 <p class="we-want-card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerion ullamco laboris nisi ut aliquip ex ea commodo.</p>
               </div>
               <div class="we-want-card__line"></div>
             </div>
-            <div class="we-want-card">
+            <div class="we-want-card animated fadeOutRight fast">
               <div class="we-want-card__content">
                 <h3 class="we-want-card__title">ILLUSTRATION</h3>
                 <p class="we-want-card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerion ullamco laboris nisi ut aliquip ex ea commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerion ullamco laboris nisi ut.</p>
@@ -58,14 +58,13 @@
             </div>
           </div>
           <div class="we-want-cards__line">
-            <div class="we-want-card">
+            <div class="we-want-card animated fadeOutLeft fast">
               <div class="we-want-card__content">
                 <h3 class="we-want-card__title">PRINT LAYOUT</h3>
                 <p class="we-want-card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim ad minim veniam, quis nostrud exerion ullamco laboris nisi ut aliquip ex ea codo. Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
-              <div class="we-want-card__line"></div>
             </div>
-            <div class="we-want-card">
+            <div class="we-want-card animated fadeOutRight fast">
               <div class="we-want-card__content">
                 <h3 class="we-want-card__title">WEB & APP</h3>
                 <p class="we-want-card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerion ullamco laboris nisi ut aliquip ex ea commodo.</p>
@@ -73,34 +72,34 @@
               <div class="we-want-card__line"></div>
             </div>
           </div>
-          <div class="about-arrow"><img src="img/about-page/arrow-down-wht.svg" alt="alt"></div>
+          <div class="about-arrow arrow-vertical"><img src="img/about-page/arrow-down-wht.svg" alt="alt"></div>
         </div>
         <div class="we-want__link-wrapper"><a href="#" class="ffd-magenta-link">CHECK WORK CASES IN OUR PORTFOLIO</a></div>
       </div>
-      <div class="about-page__sect-cover"></div>
+      <div class="about-page__sect-cover animated fadeOutLeft"></div>
     </section>
     <section data-section-index="2" class="about-page__sect about-page__sect--3">
       <div class="about-page__working-container">
-        <h2>WORKING PROCESS</h2>
+        <h2 class="animated fadeOutDown">WORKING PROCESS</h2>
         <div class="working-cards">
-          <div class="about-arrow"><img src="img/about-page/arrow-right-black.svg" alt="alt"></div>
-          <div class="about-arrow"><img src="img/about-page/arrow-down-gray.svg" alt="alt"></div>
-          <div class="working-card">
+          <div class="about-arrow arrow-horizontal"><img src="img/about-page/arrow-right-black.svg" alt="alt"></div>
+          <div class="about-arrow arrow-vertical"><img src="img/about-page/arrow-down-gray.svg" alt="alt"></div>
+          <div class="working-card animated fadeOutUp fast">
             <div class="working-card__num">1</div>
             <div class="working-card__name">RESEARCH</div>
             <div class="working-card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidi dunt ut labore et dolore magna aliqua. Ut enim adore minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat aute irure dolor in reprehenderit voluptate.</div>
           </div>
-          <div class="working-card">
+          <div class="working-card animated fadeOutDown fast">
             <div class="working-card__num">2</div>
             <div class="working-card__name">STRATEGY</div>
             <div class="working-card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidi dunt ut labore et dolore magna aliqua. Ut enim adore minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat aute irure dolor in reprehenderit voluptate.</div>
           </div>
-          <div class="working-card">
+          <div class="working-card animated fadeOutUp fast">
             <div class="working-card__num">3</div>
             <div class="working-card__name">CREATING</div>
             <div class="working-card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidi dunt ut labore et dolore magna aliqua. Ut enim adore minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat aute irure dolor in reprehenderit voluptate.</div>
           </div>
-          <div class="working-card">
+          <div class="working-card animated fadeOutDown fast">
             <div class="working-card__num">4</div>
             <div class="working-card__name">DELIVERY</div>
             <div class="working-card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidi dunt ut labore et dolore magna aliqua. Ut enim adore minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat aute irure dolor in reprehenderit voluptate.</div>
@@ -110,70 +109,70 @@
     </section>
     <section data-section-index="3" class="about-page__sect about-page__sect--4">
       <div class="team-container team-container--top">
-        <h2>MEET THE PACK</h2>
+        <h2 class="animated flipOutX">MEET THE PACK</h2>
         <div class="team-manager">
           <div class="team-manager__img"><img src="img/about-page/manager.png" alt="alt"></div><a href="#" class="ffd-magenta-link">GET IN TOUCH WITH OUR MANAGER</a>
         </div>
-        <div class="team-rectangle"></div>
+        <div class="team-rectangle animated rollOut"></div>
       </div>
       <div class="team-container">
         <div class="team-cards">
-          <div class="team-card">
+          <div class="team-card animated zoomOut fast">
             <div style="background-image: url(img/about-page/team-person-1.jpg)" class="team-card__img"></div>
             <div class="team-card__name">PAVEL</div>
             <div class="team-card__role">founder</div>
           </div>
-          <div class="team-card">
+          <div class="team-card animated animated zoomOut fast">
             <div style="background-image: url(img/about-page/team-person-2.jpg)" class="team-card__img"></div>
             <div class="team-card__name">ANTHONY</div>
             <div class="team-card__role">designer</div>
           </div>
-          <div class="team-card">
+          <div class="team-card animated zoomOut fast">
             <div style="background-image: url(img/about-page/team-person-3.jpg)" class="team-card__img"></div>
             <div class="team-card__name">ALEX</div>
             <div class="team-card__role">illustrator</div>
           </div>
-          <div class="team-card">
+          <div class="team-card animated zoomOut fast">
             <div style="background-image: url(img/about-page/team-person-4.jpg)" class="team-card__img"></div>
             <div class="team-card__name">VLAD</div>
             <div class="team-card__role">developer</div>
           </div>
-          <div class="team-card">
+          <div class="team-card animated zoomOut fast">
             <div style="background-image: url(img/about-page/team-person-1.jpg)" class="team-card__img"></div>
             <div class="team-card__name">PAVEL</div>
             <div class="team-card__role">founder</div>
           </div>
-          <div class="team-card">
+          <div class="team-card animated animated zoomOut fast">
             <div style="background-image: url(img/about-page/team-person-2.jpg)" class="team-card__img"></div>
             <div class="team-card__name">ANTHONY</div>
             <div class="team-card__role">designer</div>
           </div>
-          <div class="team-card">
+          <div class="team-card animated zoomOut fast">
             <div style="background-image: url(img/about-page/team-person-3.jpg)" class="team-card__img"></div>
             <div class="team-card__name">ALEX</div>
             <div class="team-card__role">illustrator</div>
           </div>
-          <div class="team-card">
+          <div class="team-card animated zoomOut fast">
             <div style="background-image: url(img/about-page/team-person-4.jpg)" class="team-card__img"></div>
             <div class="team-card__name">VLAD</div>
             <div class="team-card__role">developer</div>
           </div>
-          <div class="team-card">
+          <div class="team-card animated zoomOut fast">
             <div style="background-image: url(img/about-page/team-person-1.jpg)" class="team-card__img"></div>
             <div class="team-card__name">PAVEL</div>
             <div class="team-card__role">founder</div>
           </div>
-          <div class="team-card">
+          <div class="team-card animated animated zoomOut fast">
             <div style="background-image: url(img/about-page/team-person-2.jpg)" class="team-card__img"></div>
             <div class="team-card__name">ANTHONY</div>
             <div class="team-card__role">designer</div>
           </div>
-          <div class="team-card">
+          <div class="team-card animated zoomOut fast">
             <div style="background-image: url(img/about-page/team-person-3.jpg)" class="team-card__img"></div>
             <div class="team-card__name">ALEX</div>
             <div class="team-card__role">illustrator</div>
           </div>
-          <div class="team-card">
+          <div class="team-card animated zoomOut fast">
             <div style="background-image: url(img/about-page/team-person-4.jpg)" class="team-card__img"></div>
             <div class="team-card__name">VLAD</div>
             <div class="team-card__role">developer</div>
@@ -212,16 +211,16 @@
         <div class="search-screen__nav">
           <div class="search-screen__nav-title">QUICK <br>NAVIGATION</div>
           <ul>
-            <li><a href="#">logo</a></li>
-            <li><a href="#">branding</a></li>
-            <li><a href="#">uix</a></li>
-            <li><a href="#">landing</a></li>
-            <li><a href="#">website</a></li>
-            <li><a href="#">app</a></li>
-            <li><a href="#">print</a></li>
-            <li><a href="#">illustration</a></li>
-            <li><a href="#">motion</a></li>
-            <li><a href="#">motion</a></li>
+            <li><a href="#">logo<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">branding<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">uix<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">landing<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">website<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">app<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">print<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">illustration<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">motion<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">motion<i class="fas fa-arrow-right"></i></a></li>
           </ul>
         </div>
         <div class="search-screen__field">
