--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
       </div>
     </header>
     <section class="main-page">
-      <div class="main-page__left"><img src="img/main-page/main-page_visual.svg" alt="alt"></div>
+      <div class="main-page__left">
+        <div class="main-page__inner">
+          <div class="main-page__visual"></div>
+        </div><img src="img/main-page/main-page_visual.svg" alt="alt" class="main-page__pict animated pulse infinite delay-2s">
+      </div>
       <div class="main-page__right">
         <h2>FIVE FOR DOG</h2>
         <p class="ffd-paragrafh">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Esse cillum dolore eu fugiat nulla pariatur.</p><a href="#" class="button">GET A QUOTE</a>
@@ -58,16 +62,16 @@
         <div class="search-screen__nav">
           <div class="search-screen__nav-title">QUICK <br>NAVIGATION</div>
           <ul>
-            <li><a href="#">logo</a></li>
-            <li><a href="#">branding</a></li>
-            <li><a href="#">uix</a></li>
-            <li><a href="#">landing</a></li>
-            <li><a href="#">website</a></li>
-            <li><a href="#">app</a></li>
-            <li><a href="#">print</a></li>
-            <li><a href="#">illustration</a></li>
-            <li><a href="#">motion</a></li>
-            <li><a href="#">motion</a></li>
+            <li><a href="#">logo<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">branding<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">uix<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">landing<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">website<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">app<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">print<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">illustration<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">motion<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">motion<i class="fas fa-arrow-right"></i></a></li>
           </ul>
         </div>
         <div class="search-screen__field">
