--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <footer class="footer footer--index">
       <div class="footer-container"><a href="#" class="toggle-mnu"><span></span></a>
         <ul class="footer-menu">
-          <li class="footer-menu__index-page"><a href="#">home</a></li>
+          <li class="footer-menu__index-page active"><a href="#">home</a></li>
           <li class="footer-menu__index-page"><a href="#">about</a></li>
           <li><a href="#">portfolio</a></li>
           <li><a href="#">contact us</a></li>
@@ -62,16 +62,16 @@
         <div class="search-screen__nav">
           <div class="search-screen__nav-title">QUICK <br>NAVIGATION</div>
           <ul>
-            <li><a href="#">logo<i class="fas fa-arrow-right"></i></a></li>
-            <li><a href="#">branding<i class="fas fa-arrow-right"></i></a></li>
-            <li><a href="#">uix<i class="fas fa-arrow-right"></i></a></li>
-            <li><a href="#">landing<i class="fas fa-arrow-right"></i></a></li>
-            <li><a href="#">website<i class="fas fa-arrow-right"></i></a></li>
-            <li><a href="#">app<i class="fas fa-arrow-right"></i></a></li>
-            <li><a href="#">print<i class="fas fa-arrow-right"></i></a></li>
-            <li><a href="#">illustration<i class="fas fa-arrow-right"></i></a></li>
-            <li><a href="#">motion<i class="fas fa-arrow-right"></i></a></li>
-            <li><a href="#">motion<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#">logo</a></li>
+            <li><a href="#">branding</a></li>
+            <li><a href="#">uix</a></li>
+            <li><a href="#">landing</a></li>
+            <li><a href="#">website</a></li>
+            <li><a href="#">app</a></li>
+            <li><a href="#">print</a></li>
+            <li><a href="#">illustration</a></li>
+            <li><a href="#">motion</a></li>
+            <li><a href="#">motion</a></li>
           </ul>
         </div>
         <div class="search-screen__field">
