selects cuts end

--- a/contacts.html
+++ b/contacts.html
@@ -39,26 +39,24 @@
                 </label>
               </div>
               <div class="ffd-form__row ffd-form__row--selects">
-                <div class="ffd-form__select">PROJECT TYPE
-                  <div class="ffd-form__select-label"></div>
+                <label class="ffd-form__label"><span class="ffd-form__label-mame">project type</span>
                   <select>#(name="")
                     <option value="">SELECT THAT APPLY</option>
-                    <option value="">SELECT THAT APPLY</option>
-                    <option value="">SELECT THAT APPLY</option>
-                    <option value="">SELECT THAT APPLY</option>
-                    <option value="">SELECT THAT APPLY</option>
+                    <option value="">branding</option>
+                    <option value="">web design</option>
+                    <option value="">illustration</option>
+                    <option value="">something else</option>
                   </select>
-                </div>
-                <div class="ffd-form__select">
-                  <div class="ffd-form__select-label">BUDGET</div>
+                </label>
+                <label class="ffd-form__label"><span class="ffd-form__label-mame">BUDGET</span>
                   <select>#(name="")
-                    <option value="">INVEST IN PROJECT</option>
-                    <option value="">INVEST IN PROJECT</option>
-                    <option value="">INVEST IN PROJECT</option>
-                    <option value="">INVEST IN PROJECT</option>
-                    <option value="">INVEST IN PROJECT</option>
+                    <option value="">BUDGET</option>
+                    <option value="">less than $1000</option>
+                    <option value="">$1000 - $5000</option>
+                    <option value="">$5000 - $10000</option>
+                    <option value="">more than $10000</option>
                   </select>
-                </div>
+                </label>
               </div>
               <label class="ffd-form__label ffd-form__label--textarea"><span class="ffd-form__label-mame">QUICK MESSAGE</span>
                 <textarea name=""></textarea>
